# base-token-sentry

./: .gitignore  README.md  docker-compose.yml
backend/: .gitignore  Dockerfile  pyproject.toml
backend/src/token_sentry/: __init__.py  analyzer.py  api.py  holder_analyzer.py  honeypot_detector.py  liquidity_checker.py  models.py  schemas.py  scorer.py  watcher.py
backend/src/token_sentry/ml/: __init__.py  __main__.py  collect.py  data_collector.py  data_generator.py  data_processor.py  ml_scorer.py  retrain.py  token_lists.py  trainer.py
backend/src/token_sentry/ml/models/: token_sentry_model.json
backend/tests/: conftest.py  test_analyzer.py  test_api.py  test_data_collector.py  test_holder_analyzer.py  test_honeypot.py  test_liquidity_checker.py  test_ml_scorer.py  test_scorer.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/analyze/: page.tsx
frontend/app/tokens/: page.tsx
frontend/app/tokens/[address]/: page.tsx
frontend/app/watch/: page.tsx
frontend/components/: ContractFlags.tsx  Footer.tsx  Header.tsx  HolderDistribution.tsx  HoneypotResult.tsx  LiquidityPanel.tsx  QueryProvider.tsx  SafetyScoreGauge.tsx  TokenSearch.tsx  TokenTable.tsx
frontend/lib/: api.ts  types.ts
