[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "token-sentry"
version = "0.1.0"
description = "Base Token Sentry - DeFi token safety analysis and honeypot detection"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "web3>=6.19.0",
    "xgboost>=2.0.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.hatch.build.targets.wheel]
packages = ["src/token_sentry"]
